@@ -41,7 +41,15 @@ namespace VisualCCommon
         {
             if (!System.IO.Directory.Exists(this.InstallPath))
             {
-                throw new Opus.Core.Exception(System.String.Format("Path '{0}' does not exist", this.InstallPath), false);
+                string absolutePath = System.IO.Path.Combine(Opus.Core.State.WorkingDirectory, this.InstallPath);
+                if (!System.IO.Directory.Exists(absolutePath))
+                {
+                    throw new Opus.Core.Exception(System.String.Format("Path '{0}' does not exist and is not relative to the working directory '{1}",
+                                                  this.InstallPath,
+                                                  Opus.Core.State.WorkingDirectory), false);
+                }
+
+                this.InstallPath = absolutePath;
             }
 
             Opus.Core.State.AddCategory("VisualC");
